--- a/readme.Rmd
+++ b/readme.Rmd
@@ -10,7 +10,7 @@ output:
 
 
 
-## Variables
+## Beschreibung der Daten
 
 | Column        | Description                                                                                                                                              | Type        |     | 
 |---------------|----------------------------------------------------------------------------------------------------------------------------------------------------------|-------------|-----| 
@@ -31,6 +31,7 @@ output:
 ```{r warning=FALSE}
 library(dplyr)
 library(ggplot2)
+library(tidyr)
 
 # import data
 df <- read.csv("data/bundestagsprotokolle_19.csv", sep = "\t", stringsAsFactors = F)
@@ -40,25 +41,84 @@ df <- read.csv("data/bundestagsprotokolle_19.csv", sep = "\t", stringsAsFactors 
 
 ### Wieviel klatschen die Fraktionen für sich selbst und wieviel für die anderen?
 ```{r}
+party_vector <- c("afd", "fdp", "gruene", "linke", "spd", "union")
+
 df_beifall_self <- df %>%  
   filter(type == "beifall", party == speaker_party) %>% 
-  group_by(party) %>% 
-  summarise(self = n())
+  count(party) %>% 
+  rename(self = n)
 
 df_beifall_others <- df %>% 
   filter(type == "beifall", party != speaker_party) %>% 
-  group_by(party) %>% 
-  summarise(others = n())
+  count(party)  %>% 
+  rename(others = n)
 
 df_beifall_all <- df %>%
   filter(type == "beifall") %>% 
-  group_by(party) %>% 
-  summarise(others = n())
+  count(party) %>% 
+  rename(all = n)
 
+df_beifall_all %>% 
+  left_join(df_beifall_self, by = "party") %>% 
+  left_join(df_beifall_others, by = "party") %>% 
+  mutate(share_self = self/all,
+         share_others = others/all) %>% 
+  filter(party %in% party_vector) %>% 
+  arrange(desc(share_self)) %>% 
+  mutate(order = row_number()) %>% 
+  tidyr::gather(type, factor, 5:6) %>% 
+  ggplot(aes(x = reorder(party, -order), y = factor, group = type, fill = type)) +
+    geom_bar(stat = "identity") +
+    scale_y_continuous(labels = scales::percent) +
+    coord_flip() +
+    labs(title = "Anteil des Beifalls für die eigene Fraktion und andere Fraktionen")
 
 
 ```
 
+### Wenn eine Partei für andere klatscht, wie oft klatscht dann die ganze Fraktion und wann nur Teile einer Fraktion?
+
+Die AfD klatscht deutlich weniger für andere. Und wenn sie es doch tut, dann sind das vor allem einzelne Abgeordnete oder nur Teile der Fraktion.
+
+```{r}
+
+df %>% 
+  filter(type == "beifall", party != speaker_party) %>% 
+  count(party, party_action) %>% 
+  spread(party_action, n) %>% 
+  mutate(sum =  `0` +`1`) %>% 
+  arrange(desc(sum)) %>% 
+  mutate(order = row_number()) %>% 
+  rename(ganze_partei = `0`, teile_der_partei = `1`) %>% 
+  gather(party_action, value, -party, -sum, -order) %>% 
+  ggplot(aes(x = reorder(party, -order), y = value, group = party_action, fill = party_action)) +
+  geom_bar(stat = "identity") +
+  coord_flip()
+```
+
+### Wie viel klatschen die Fraktionen für andere? 
+
+Und wieviel Aufmerksamkeit bekommt die AfD von den anderen Parteien?
+
+
+```{r}
+df %>%  
+  filter(type == "beifall", party != "alle", party != speaker_party) %>% 
+  count(party, speaker_party) %>% 
+  filter(party %in% party_vector, speaker_party %in% party_vector) %>% 
+  spread(speaker_party, n) %>% 
+  rowwise() %>% 
+  mutate(nicht_afd = sum(fdp, gruene, linke, spd, union, na.rm= TRUE)) %>% 
+  arrange(desc(nicht_afd)) %>% 
+  mutate(order = row_number()) %>% 
+  select(party, afd, nicht_afd, order) %>% 
+  gather(type, value, -order, -party) %>% 
+  ggplot(aes(x = reorder(party, -order), y = value, fill = type, group = desc(type))) +
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  labs(title= "Wie oft die Fraktionen für die AfD oder die anderen Fraktionen klatschen",
+       caption = "Quelle: Bundestag, Analyse: SZ")
+```
 
 ## Lachen
 
@@ -82,6 +142,7 @@ df %>%
 Die AfD lacht vor allem Sprecher der Union aus. 
 
 ```{r}
+
 df %>% 
   filter(type == "lachen", party == "afd") %>% 
   group_by(party, speaker_party) %>% 
@@ -95,7 +156,7 @@ df %>%
   
 ```
 
-### Wen lachen die anderen Parteien aus?
+### Bei welchen Rednern lachen die Fraktionen (ohne AfD)?
 
 Die anderen Parteien (insbesondere die SPD) lachen auch vor allem die AfD aus. 
 
